force-app/main/default/objects/APT_APPC_Definition__c/APT_APPC_Definition__c.object-meta.xml
<CustomObject>
    <description>APPC Zone Mappings object is used to get the destination zone details based on product and price model. This information is used to display destination zone on View RateCard, Proposal and Contract Document for Australia Post Parcel Contract Product.</description>
    <label>APPC Zone Mapping</label>
    <nameField>
        <label>APPC Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APPC Zone Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>