force-app/main/default/objects/APT_APPC_Definition__c/fields/APT_Dest_Zone1__c.field-meta.xml
<CustomField>
    <fullName>APT_Dest_Zone1__c</fullName>
    <description>This field represent the Destination e.g. National, Same State, Near State, Interstate.
This information will be print on ViewRatecard, Proposal and Contract document.</description>
    <label>Dest Zone1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>