force-app/main/default/objects/APT_APPC_Definition__c/fields/APT_Dest_Zone2__c.field-meta.xml
<CustomField>
    <fullName>APT_Dest_Zone2__c</fullName>
    <description>This field represent the Destination Zone e.g. either Capital/Local, Country, Metro, and each State in case of Z60.
This information will be used to map it with Pricing Information to pull what needs to be Print on ViewRatecard, Proposal and Contract document.</description>
    <label>Dest Zone2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>