force-app/main/default/objects/APT_APPC_Definition__c/fields/APT_Lodgement__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgement__c</fullName>
    <description>Lodgment values eg Capital, Country, Metro</description>
    <label>Lodgement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>