force-app/main/default/objects/APT_APPC_Definition__c/fields/APT_Price_Model__c.field-meta.xml
<CustomField>
    <fullName>APT_Price_Model__c</fullName>
    <description>Price model value for eg Z3, Z6, Z9</description>
    <label>Price Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z003</fullName>
                <label>Z3</label>
            </value>
            <value>
                <fullName>Z006</fullName>
                <label>Z6</label>
            </value>
            <value>
                <fullName>Z009</fullName>
                <label>Z9</label>
            </value>
            <value>
                <fullName>Z060</fullName>
                <label>Z60</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>